NILE-1461:Fix rubric icon style issue on firefox and Safari

--- a/app/styles/routes/content/rubric/_preview.scss
+++ b/app/styles/routes/content/rubric/_preview.scss
@@ -70,10 +70,9 @@
                   width: 30px;
                   vertical-align: top;
                   &.rubric-icon {
-                    background: url("gooru/images/rubric-white.svg");
-                    -webkit-background-size: 30px 49px;
-                    background-size: 30px 49px;
-                    height: 49px;
+                    background: url("gooru/images/rubric-white.svg") no-repeat;
+                    background-size: contain;
+                    height: 20px;
                     width: 30px;
                   }
                 }
